--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f8f8;
+    background-color: white;
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -12,27 +12,26 @@ h1 {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .card {
-    background-color: white;
-    border-radius: 30px;
+    background-color: transparent;
+    border: 10px solid black;
     width: 400px;
-    height: 600px;
+    height: 400px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5%;
-    text-align: center;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 3%;
     flex-direction: column;
-    position: relative;
 }
 
 .topic-answer {
-    margin: 50px 0px;
-    font-size: 36px;
+    margin: 0px;
+    font-size: 48px;
 }
 
 button {
@@ -42,11 +41,8 @@ button {
     color: white;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 50px;
     border: none;
-    border-radius: 10px;
-    position: absolute;
-    bottom: 8%;
     padding: 0px 30px;
 }
 
@@ -54,4 +50,10 @@ button:active {
     background-color: gray;
     transition: background-color 0.1s, transform 0.2s, opacity 0.2s;
     transform: scale(0.97);
+}
+
+.logo {
+    width: 150px;
+    height: auto;
+    margin-bottom: 30px;
 }
